# QDiskInfo

./: .gitignore  CMakeLists.txt  README.md  crowdin.yml  custombutton.cpp  custombutton.h  docker-compose.yml  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qdiskinfo-appimage.sh  statusdot.cpp
.github/scripts/: KDiskInfo.desktop  QDiskInfo.desktop
.github/workflows/: build.yaml
docker/: dockerfile-qt5-glibc  dockerfile-qt5-musl  dockerfile-qt6-glibc  dockerfile-qt6-musl  qt5-glibc.sh  qt5-musl.sh  qt6-glibc.sh  qt6-musl.sh
include/: asciiview.h  custombutton.h  diskitem.h  gridview.h  mainwindow.h  statusdot.h  utils.h
src/: asciiview.cpp  custombutton.cpp  custombutton.h  gridview.cpp  jsonparser.cpp  jsonparser.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  statusdot.cpp  statusdot.h  utils.cpp  utils.h
translations/: kdiskinfo.ts  kdiskinfo_el_GR.qm  kdiskinfo_el_GR.ts  kdiskinfo_es_ES.qm  kdiskinfo_es_ES.ts  kdiskinfo_pt_BR.qm  kdiskinfo_pt_BR.ts  qdiskinfo_af_ZA.ts  qdiskinfo_ar_SA.ts  qdiskinfo_ca_ES.ts  qdiskinfo_cs_CZ.ts  qdiskinfo_da_DK.ts  qdiskinfo_de_DE.ts  qdiskinfo_el_GR.qm  qdiskinfo_el_GR.ts  qdiskinfo_en_US.ts  qdiskinfo_es_ES.qm  qdiskinfo_es_ES.ts  qdiskinfo_fi_FI.ts  qdiskinfo_fr_FR.ts  qdiskinfo_he_IL.ts  qdiskinfo_hu_HU.ts  qdiskinfo_it_IT.ts  qdiskinfo_ja_JP.ts  qdiskinfo_ko_KR.ts  qdiskinfo_lv_LV.ts  qdiskinfo_nl_NL.ts  qdiskinfo_no_NO.ts  qdiskinfo_pl_PL.ts  qdiskinfo_pt_BR.qm  qdiskinfo_pt_BR.ts  qdiskinfo_pt_PT.ts  qdiskinfo_ro_RO.ts  qdiskinfo_ru_RU.ts  qdiskinfo_sr_SP.ts  qdiskinfo_sv_SE.ts  qdiskinfo_th_TH.ts  qdiskinfo_tr_TR.ts  qdiskinfo_uk_UA.ts  qdiskinfo_vi_VN.ts  (+3 more)
